--- a/web/src/pages/Home/home.css
+++ b/web/src/pages/Home/home.css
@@ -1,7 +1,7 @@
 #page-home {
   height: 100vh;
 
-  background: url('../../assets/home-background.svg') no-repeat 700 bottom;
+  background: url('../../assets/home-background.svg') no-repeat 700px bottom;
 }
 
 #page-home .content {
@@ -55,18 +55,6 @@
   margin-top: 40px;
 }
 
-span {
-  display: block;
-  background: rgba(0, 0, 0, 0.08);
-  width: 72px;
-  height: 72px;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: background-color 0.2s;
-}
-
 #page-home .content main a span {
   display: block;
   background: rgba(0, 0, 0, 0.08);
@@ -77,12 +65,6 @@ span {
   align-items: center;
   justify-content: center;
   transition: background-color 0.2s;
-}
-
-svg {
-  color: #FFF;
-  width: 20px;
-  height: 20px;
 }
 
 #page-home .content main a span svg {
